# marker_based_localization

./: CMakeLists.txt  README.md  package.xml
include/marker_based_localization/detection/: artag_detection.hpp  marker_detection.hpp
include/marker_based_localization/localization/: aligned_marker_based_localization.hpp  hybrid_localization.hpp  marker_based_localization.hpp
include/marker_based_localization/markers/: aligned_marker.hpp  marker.hpp  marker_container.hpp
include/marker_based_localization/ros/: marker_msgs.hpp  tf2_helpers.hpp
launch/: aligned_marker_based_localization_ros.launch  hybrid_localization.launch
src/nodes/: aligned_marker_based_localization_ros.cpp  hybrid_localization_ros.cpp
src/ros/: tf2_helpers.cpp
